<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvWelcomeTitle"
        style="@style/StoryTextContent.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_welcome"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/label_register_welcome_desc"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTitle" />

    <TextView
        android:id="@+id/tvNameTitle"
        style="@style/StoryTextInputContent.EditTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_nama"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDesc" />

    <com.manyan.mystoryapp.presentation.customview.DefaultEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:maxLines="1"
        android:hint="Ikhsan"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvEmailTitle"
        style="@style/StoryTextContent.EditTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/label_email"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <com.manyan.mystoryapp.presentation.customview.EmailEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_16dp"
        android:hint="@string/email_here"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />

    <TextView
        android:id="@+id/tvPasswordTitle"
        style="@style/StoryTextContent.EditTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <com.manyan.mystoryapp.presentation.customview.PasswordEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_button"
        android:text="@string/action_register"
        android:translationZ="0dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister">

        <TextView
            android:id="@+id/tvIsHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_is_have_account" />

        <TextView
            android:id="@+id/tvToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:text="@string/action_to_login"
            android:textColor="@color/colorDarkRed"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackDim"
        android:elevation="@dimen/dimen_2dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>