<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manyan.mystoryapp.view.dashboard.newstory.NewStoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navi"
        app:layout_collapseMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_new_story"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/preview_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/action_camera"
        android:translationZ="0dp"
        app:layout_constraintEnd_toEndOf="@+id/preview_image"
        app:layout_constraintStart_toStartOf="@+id/preview_image"
        app:layout_constraintTop_toBottomOf="@+id/preview_image" />

    <TextView
        android:id="@+id/tv_uploading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploading"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_gallery"
        android:text="@string/action_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="top|start"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_gallery"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

    <Button
        android:id="@+id/upload_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:text="@string/action_upload_story"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/shareloc"
        app:layout_constraintStart_toStartOf="@+id/shareloc" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackDim"
        android:elevation="@dimen/dimen_2dp"
        android:visibility="gone" />

    <Switch
        android:id="@+id/shareloc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/shareloc"
        app:layout_constraintBottom_toTopOf="@+id/upload_story"
        app:layout_constraintEnd_toEndOf="@+id/description_edit_text"
        app:layout_constraintStart_toStartOf="@+id/description_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/description_edit_text"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>